# Language-Models

./: .gitignore  README.md  main.py  pyproject.toml  sample.py  train.py
configs/: base_config.yaml  bigram.yaml  bow.yaml  gpt.yaml  mlp.yaml  rnn.yaml  rnn_basic.yaml
scripts/: evaluate.py  generate.py  prepare.py  train.py
src/: cli.py  data_module.py  data_pipeline.py  data_processor.py  lit_language_model.py  tokenizer.py  trainer_cli.py
src/core/: generation.py  prepare.py  train.py
src/data/: __init__.py  datamodule.py  dataset.py
src/data_pipeline/: __init__.py  processor.py
src/data_pipeline/cleaners/: __init__.py  base.py  factory.py  implementations.py
src/data_pipeline/processing/: __init__.py  processor.py  sequencing.py
src/data_pipeline/tokenization/: __init__.py  char_tokenizer.py
src/data_pipeline/utils/: __init__.py
src/model/: __init__.py  base_model.py  bigram.py
src/models/: GPT.py  __init__.py  base.py  bigram.py  bow.py  mlp.py  rnn.py
src/models/layers/: Attention.py
src/tokenization/: __init__.py  base_tokenizer.py  bpe_tokenizer.py  examples.py
src/utils/: config.py  io.py  log.py  model_loader.py
